trunk/Archive2/e4/b5054d82c00595/output
main.cpp:3:6: error: stray '#' in program
     &#8482;
      ^
main.cpp: In function 'int main()':
main.cpp:3:7: error: lvalue required as unary '&' operand
     &#8482;
       ^
