trunk/Archive2/e4/b5054d82c00595/main.cpp
int main()
{
    &#8482;
}
